--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -59,11 +59,11 @@ alertmanager:
   ingress:
     ## If true, alertmanager Ingress will be created
     ##
-    enabled: false
+    enabled: true
 
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
     # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
-    className: ""
+    className: "nginx"
 
     ## alertmanager Ingress annotations
     ##
@@ -867,7 +867,7 @@ server:
     ## Prometheus server Ingress hostnames with optional path
     ## Must be provided if Ingress is enabled
     ##
-    hosts: []
+    hosts: [prometheus.kunal.com]
     #   - prometheus.domain.com
     #   - domain.com/prometheus
 
