--- a/mon-app/ksm.yaml
+++ b/mon-app/ksm.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kube-state-metrics
-  namespace: argocd
+  namespace: default
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
