--- a/test.yaml
+++ b/test.yaml
@@ -6,11 +6,11 @@ metadata:
   name: monitoring
 spec:
   destination:
-    namespace: default
+    namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
     path: ./mon-app
-    repoURL: 'https://github.com/kjha27/cldcvr.git'
+    repoURL: 'https://github.com/kunal2791/cldcvr.git'
     targetRevision: HEAD
   project: default
   syncPolicy:
