--- a/mon-app/ksm.yaml
+++ b/mon-app/ksm.yaml
@@ -11,6 +11,6 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: ./kube-state-metrics
+    path: ../kube-state-metrics
     repoURL: https://github.com/kjha27/cldcvr.git
     targetRevision: HEAD
