--- a/test.yaml
+++ b/test.yaml
@@ -4,6 +4,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: monitoring
+  namespace: argocd
 spec:
   destination:
     namespace: argocd
