added argo template files

--- a/mon-app/prom.yaml
+++ b/mon-app/prom.yaml
@@ -7,8 +7,8 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
-    server: https://kubernetes.default.svc
+    namespace: argocd
+    server: https://F7CE0DBA0488F4FDEEF121E03FB06144.gr7.us-east-1.eks.amazonaws.com
   project: default
   source:
     path: ../prometheus
