--- a/test.yaml
+++ b/test.yaml
@@ -4,11 +4,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: monitoring
-  namespace: argocd
 spec:
   destination:
-    namespace: argocd
-    server: 'https://kubernetes.default.svc'
+    namespace: default
+    server: 'https://F7CE0DBA0488F4FDEEF121E03FB06144.gr7.us-east-1.eks.amazonaws.com'
   source:
     path: ./mon-app
     repoURL: 'https://github.com/kunal2791/cldcvr.git'
