--- a/mon-app/ksm.yaml
+++ b/mon-app/ksm.yaml
@@ -1,10 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-state-metrics
-  namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
+  name: prometheus
+  namespace: default
 spec:
   destination:
     namespace: argocd
@@ -12,5 +10,5 @@ spec:
   project: default
   source:
     path: ../kube-state-metrics
-    repoURL: https://github.com/kjha27/cldcvr.git
+    repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
