added actions file

--- a/sampleapp/Dockerfile
+++ b/sampleapp/Dockerfile
@@ -3,6 +3,7 @@ COPY sampleapp/src/requirements.txt .
 RUN apt-get update
 RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
 RUN apt-get install -y python python-dev python-distribute python-pip libmysqlclient-dev
+RUN pip install -U  --upgrade pip
 RUN pip install -r requirements.txt
 RUN apt-get install -y mysql-client
 RUN mkdir /code
