added actions file

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -28,7 +28,7 @@ jobs:
         IMAGE_TAG: ${{ github.run_number }}
         IMAGE_TAG2: ${{github.sha}}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f sampleapp/backend/Dockerfile .
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG2 -f sampleapp/backend/Dockerfile .
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:backend -f sampleapp/backend/Dockerfile .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f sampleapp/frontend/Dockerfile .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG2 -f sampleapp/frontend/Dockerfile .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:frontend -f sampleapp/frontend/Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
