--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -2,6 +2,8 @@ name: Deploy to ECR
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'sampleapp/frontend/Dockerfile' 
 jobs:
   build:
     name: Build Image
