--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -631,30 +631,30 @@ dashboardProviders: {}
 ##
 ## dashboards per provider, use provider name as key.
 ##
-dashboards: {}
-  # default:
-  #   some-dashboard:
-  #     json: |
-  #       $RAW_JSON
-  #   custom-dashboard:
-  #     file: dashboards/custom-dashboard.json
-  #   prometheus-stats:
-  #     gnetId: 2
-  #     revision: 2
-  #     datasource: Prometheus
-  #   local-dashboard:
-  #     url: https://example.com/repository/test.json
-  #     token: ''
-  #   local-dashboard-base64:
-  #     url: https://example.com/repository/test-b64.json
-  #     token: ''
-  #     b64content: true
-  #   local-dashboard-gitlab:
-  #     url: https://example.com/repository/test-gitlab.json
-  #     gitlabToken: ''
-  #   local-dashboard-bitbucket:
-  #     url: https://example.com/repository/test-bitbucket.json
-  #     bearerToken: ''
+dashboards:
+  default:
+    some-dashboard:
+      json: |
+        $RAW_JSON
+    custom-dashboard:
+      file: dashboards/custom-dashboard.json
+    prometheus-stats:
+      gnetId: 2
+      revision: 2
+      datasource: Prometheus
+    local-dashboard:
+      url: https://example.com/repository/test.json
+      token: ''
+    local-dashboard-base64:
+      url: https://example.com/repository/test-b64.json
+      token: ''
+      b64content: true
+    local-dashboard-gitlab:
+      url: https://example.com/repository/test-gitlab.json
+      gitlabToken: ''
+    local-dashboard-bitbucket:
+      url: https://example.com/repository/test-bitbucket.json
+      bearerToken: ''
 
 ## Reference to external ConfigMap per provider. Use provider name as key and ConfigMap name as value.
 ## A provider dashboards must be defined either by external ConfigMaps or in values.yaml, not in both.
