added grafana dashboard

--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -300,7 +300,7 @@ extraContainerVolumes: []
 ##
 persistence:
   type: pvc
-  enabled: true
+  enabled: false
   # storageClassName: default
   accessModes:
     - ReadWriteOnce
