--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -642,19 +642,19 @@ dashboards:
       gnetId: 2
       revision: 2
       datasource: Prometheus
-    local-dashboard:
-      url: https://example.com/repository/test.json
-      token: ''
-    local-dashboard-base64:
-      url: https://example.com/repository/test-b64.json
-      token: ''
-      b64content: true
-    local-dashboard-gitlab:
-      url: https://example.com/repository/test-gitlab.json
-      gitlabToken: ''
-    local-dashboard-bitbucket:
-      url: https://example.com/repository/test-bitbucket.json
-      bearerToken: ''
+    # local-dashboard:
+    #   url: https://example.com/repository/test.json
+    #   token: ''
+    # local-dashboard-base64:
+    #   url: https://example.com/repository/test-b64.json
+    #   token: ''
+    #   b64content: true
+    # local-dashboard-gitlab:
+    #   url: https://example.com/repository/test-gitlab.json
+    #   gitlabToken: ''
+    # local-dashboard-bitbucket:
+    #   url: https://example.com/repository/test-bitbucket.json
+    #   bearerToken: ''
 
 ## Reference to external ConfigMap per provider. Use provider name as key and ConfigMap name as value.
 ## A provider dashboards must be defined either by external ConfigMaps or in values.yaml, not in both.
