--- a/mon-app/sampleapp.yaml
+++ b/mon-app/sampleapp.yaml
@@ -6,6 +6,9 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
+  syncPolicy:
+    syncOptions:
+    - Replace=true
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
