--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -1487,7 +1487,7 @@ prometheus-pushgateway:
 
   # Enable this if you're using https://github.com/coreos/prometheus-operator
   serviceMonitor:
-    enabled: ture
+    enabled: false
     namespace: argocd
 
     # Fallback to the prometheus default unless specified
