enabled monitoring for ing controller

--- a/mon-app/grafana.yaml
+++ b/mon-app/grafana.yaml
@@ -7,8 +7,8 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   syncPolicy:
-    syncOptions:
-    - Replace=true
+    automated:
+      prune: true
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
