--- a/prometheus/charts/kube-prometheus-stack/values.yaml
+++ b/prometheus/charts/kube-prometheus-stack/values.yaml
@@ -764,7 +764,8 @@ grafana:
     ## Hostnames.
     ## Must be provided if Ingress is enable.
     ##
-    hosts: grafana.kunal.com
+    hosts:
+      - grafana.kunal.com
     #hosts: []
 
     ## Path for grafana ingress
