added pods dashboard

--- a/nginx-ingress/values.yaml
+++ b/nginx-ingress/values.yaml
@@ -381,7 +381,7 @@ controller:
     initialDelaySeconds: 0
 
   ## Enable collection of latency metrics for upstreams. Requires prometheus.create.
-  enableLatencyMetrics: false
+  enableLatencyMetrics: true
 
   ## Disable IPV6 listeners explicitly for nodes that do not support the IPV6 stack.
   disableIPV6: false
