--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -34,3 +34,10 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG2 -f sampleapp/frontend/Dockerfile .
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:frontend -f sampleapp/frontend/Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
+    - name: Create local changes
+      run: |
+        sed -e 's/tag: .*$/tag: ${{ github.run_number }}/g' ./sampleapp/helm/values.yaml
+    - name: Commit & Push changes
+      uses: actions-js/push@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
