--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Commit files
       run: |
-        sed -e 's/tag: .*$/tag: ${{ github.run_number }}/g' ./sampleapp/helm/values.yaml
+        sed -i -e 's/tag: .*$/tag: ${{ github.run_number }}/g' ./sampleapp/helm/values.yaml
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git commit -a -m "Add changes"
