--- a/mon-app/sampleapp.yaml
+++ b/mon-app/sampleapp.yaml
@@ -17,3 +17,6 @@ spec:
     path: sampleapp/helm
     repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
+0 image tag
+$#updated image tag
+#updated image tag
