--- a/canary/canary-ing.yaml
+++ b/canary/canary-ing.yaml
@@ -3,15 +3,16 @@ kind: Ingress
 metadata:
   name: canary-demo
   annotations:
-    ingress.kubernetes.io/proxy-body-size: 100M
     kubernetes.io/ingress.class: nginx
-    ingress.kubernetes.io/app-root: /
 spec:
   rules:
-  - host: canary.dev.kunal.com
+  - host: "canary-preview.kunal.com"
     http:
       paths:
-      - path: /
+      - pathType: Prefix
+        path: "/"
         backend:
-          serviceName: canary-demo
-          servicePort: 80
+          service:
+            name: canary-demo
+            port:
+              number: 80
