--- a/canary/canary-ing.yaml
+++ b/canary/canary-ing.yaml
@@ -13,6 +13,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: canary-demo
+            name: canary-demo-preview
             port:
               number: 80
