added canary service

--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -301,7 +301,7 @@ extraContainerVolumes: []
 persistence:
   type: pvc
   enabled: true
-  storageClass: default
+  storageClassName: default
   accessModes:
     - ReadWriteOnce
   size: 10Gi
