--- a/mon-app/prom.yaml
+++ b/mon-app/prom.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: prometheus-stack
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -14,6 +14,6 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: prometheus
+    path: helm-charts/charts/kube-prometheus-stack/.
     repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
