--- a/apps/sampleapp.yaml
+++ b/apps/sampleapp.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: canary
-  namespace: argocd
+  name: sampleapp
+  namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -10,10 +10,16 @@ spec:
     automated:
       prune: true
   destination:
-    namespace: argocd
+    namespace:  argocd
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: canary
+    path: sampleapp/helm
     repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
+
+#updated image tag with 17
+#updated image tag with 18
+#updated image tag with 19
+#updated image tag with 20
+#updated image tag with 21
