--- a/apps/ksm.yaml
+++ b/apps/ksm.yaml
@@ -1,8 +1,8 @@
 # apiVersion: argoproj.io/v1alpha1
 # kind: Application
 # metadata:
-#   name: grafana
-#   namespace: argocd
+#   name: kube-state-metrics
+#   namespace:  argocd
 #   finalizers:
 #   - resources-finalizer.argocd.argoproj.io
 # spec:
@@ -10,10 +10,10 @@
 #     automated:
 #       prune: true
 #   destination:
-#     namespace: argocd
+#     namespace:  argocd
 #     server: 'https://kubernetes.default.svc'
 #   project: default
 #   source:
-#     path: grafana
+#     path: kube-state-metrics
 #     repoURL: https://github.com/kunal2791/cldcvr.git
 #     targetRevision: main
