--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus-stack
-  namespace: argocd
+  name: all-about-monitoring
+  namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -10,10 +10,10 @@ spec:
     automated:
       prune: true
   destination:
-    namespace: argocd
+    namespace:  argocd
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: helm-charts/charts/kube-prometheus-stack/.
+    path: monitoring/charts/kube-prometheus-stack/
     repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
