--- a/main-argo-app.yaml
+++ b/main-argo-app.yaml
@@ -1,16 +1,15 @@
-
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: monitoring
-  namespace: argocd
+  name: all-app
+  namespace:  argocd
 spec:
   destination:
-    namespace: argocd
+    namespace:  argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: ./mon-app
+    path: ./apps/
     repoURL: 'https://github.com/kunal2791/cldcvr.git'
     targetRevision: main
   project: default
