--- a/monitoring/charts/kube-prometheus-stack/values.yaml
+++ b/monitoring/charts/kube-prometheus-stack/values.yaml
@@ -65,13 +65,13 @@ defaultRules:
     kubeControllerManager: true
     kubelet: true
     kubeProxy: true
-    kubePrometheusGeneral: true
-    kubePrometheusNodeRecording: true
+    kubePrometheusGeneral: false
+    kubePrometheusNodeRecording: false
     kubernetesApps: true
     kubernetesResources: true
     kubernetesStorage: true
     kubernetesSystem: true
-    kubeSchedulerAlerting: true
+    kubeSchedulerAlerting: false
     kubeSchedulerRecording: true
     kubeStateMetrics: true
     network: true
