--- a/monitoring/charts/kube-state-metrics/values.yaml
+++ b/monitoring/charts/kube-state-metrics/values.yaml
@@ -145,7 +145,7 @@ serviceAccount:
 
 prometheus:
   monitor:
-    enabled: false
+    enabled: true
     annotations: {}
     additionalLabels: {}
     namespace: ""
