--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -1,20 +1,28 @@
-apiVersion: argoproj.io/v1alpha1
+# apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: all-about-monitoring
-  namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
+  name: kube-prometheus-stack
+  namespace: argocd
 spec:
-  syncPolicy:
-    automated:
-      prune: true
   destination:
-    namespace:  argocd
-    server: 'https://kubernetes.default.svc'
+    namespace: monitoring
+    server: https://kubernetes.default.svc
   project: default
   source:
-    # path: monitoring/charts/kube-prometheus-stack/
-    path: prometheus
-    repoURL: https://github.com/kunal2791/cldcvr.git
-    targetRevision: main
+    chart: kube-prometheus-stack
+    helm:
+      values: |-
+        prometheus-node-exporter:
+           hostRootFsMount:
+             enabled: false
+        prometheusOperator:
+           admissionWebhooks:
+             failurePolicy: Ignore
+    repoURL: https://prometheus-community.github.io/helm-charts
+    targetRevision: 42.0.3
+  syncPolicy:
+    syncOptions:
+    - ServerSideApply=true
+    - CreateNamespace=true
