--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1alpha1
+# apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   finalizers:
@@ -20,8 +20,16 @@ spec:
         prometheusOperator:
            admissionWebhooks:
              failurePolicy: Ignore
-    repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 42.0.3
+        additionalScrapeConfigs:
+        - job_name: 'argocd'
+          static_configs:
+          - targets: ['argocd-server-metrics.argocd.cluster.local:8083']
+            labels:
+              app: argocd
+              namespace: argocd
+          metrics_path: /metrics   # Add this line to specify the path
+      repoURL: https://prometheus-community.github.io/helm-charts
+      targetRevision: 42.0.3
   syncPolicy:
     syncOptions:
     - ServerSideApply=true
