--- a/apps/ksm.yaml
+++ b/apps/ksm.yaml
@@ -1,19 +1,19 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: prometheus
-  namespace:  argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-spec:
-  syncPolicy:
-    automated:
-      prune: true
-  destination:
-    namespace:  argocd
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    path: prometheus
-    repoURL: https://github.com/kunal2791/cldcvr.git
-    targetRevision: main
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: prometheus
+#   namespace:  argocd
+#   finalizers:
+#   - resources-finalizer.argocd.argoproj.io
+# spec:
+#   syncPolicy:
+#     automated:
+#       prune: true
+#   destination:
+#     namespace:  argocd
+#     server: 'https://kubernetes.default.svc'
+#   project: default
+#   source:
+#     path: prometheus
+#     repoURL: https://github.com/kunal2791/cldcvr.git
+#     targetRevision: main
