--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -23,6 +23,14 @@ spec:
         prometheusOperator:
            admissionWebhooks:
              failurePolicy: Ignore
+           additionalScrapeConfigs:
+           - job_name: 'my-custom-job'
+             scrape_interval: 15s
+             static_configs:
+             - targets: ['argocd-server-metrics:8083']
+               labels:
+                 group: 'argocd'
+               metrics_path: '/metrics'
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 42.0.3
   syncPolicy:
