--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -2,38 +2,27 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   finalizers:
-  - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io
   name: kube-prometheus-stack
   namespace: argocd
 spec:
-  syncPolicy:
-    automated:
-      prune: true
   destination:
-    namespace: argocd
+    namespace: monitoring
     server: https://kubernetes.default.svc
   project: default
   source:
     chart: kube-prometheus-stack
     helm:
-      values: |-
+      values: |
         prometheus-node-exporter:
-           hostRootFsMount:
-             enabled: false
+          hostRootFsMount:
+            enabled: false
         prometheusOperator:
-           admissionWebhooks:
-             failurePolicy: Ignore
-           additionalScrapeConfigs:
-           - job_name: 'my-custom-job'
-             scrape_interval: 15s
-             static_configs:
-             - targets: ['argocd-server-metrics:8083']
-               labels:
-                 group: 'argocd'
-               metrics_path: '/metrics'
+          admissionWebhooks:
+            failurePolicy: Ignore
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 42.0.3
   syncPolicy:
     syncOptions:
-    - ServerSideApply=true
-    - CreateNamespace=true
+      - ServerSideApply=true
+      - CreateNamespace=true
