--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -6,8 +6,11 @@ metadata:
   name: kube-prometheus-stack
   namespace: argocd
 spec:
+  syncPolicy:
+    automated:
+      prune: true
   destination:
-    namespace: monitoring
+    namespace: argocd
     server: https://kubernetes.default.svc
   project: default
   source:
