--- a/apps/promstack.yaml
+++ b/apps/promstack.yaml
@@ -1,35 +1,54 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-  name: kube-prometheus-stack
-  namespace: argocd
-spec:
-  syncPolicy:
-    automated:
-      prune: true
-  destination:
-    namespace: argocd
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    chart: kube-prometheus-stack
-    helm:
-      values: |
-        prometheus-node-exporter:
-          hostRootFsMount:
-            enabled: false
-        prometheusOperator:
-          admissionWebhooks:
-            failurePolicy: Ignore
-        additionalScrapeConfigs:
-          - job_name: argocd
-            static_configs: 
-              - targets: ["argocd-metrics:8082/metrics"]
-          - job_name: argocd-server
-            static_configs: 
-              - targets: ["argocd-server-metrics:8083/metrics"]
-    repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 42.0.3
-
+# # apiVersion: argoproj.io/v1alpha1
+# # kind: Application
+# # metadata:
+# #   finalizers:
+# #     - resources-finalizer.argocd.argoproj.io
+# #   name: kube-prometheus-stack
+# #   namespace: argocd
+# # spec:
+# #   syncPolicy:
+# #     automated:
+# #       prune: true
+# #   destination:
+# #     namespace: argocd
+# #     server: https://kubernetes.default.svc
+# #   project: default
+# #   source:
+# #     chart: kube-prometheus-stack
+# #     helm:
+# #       values: |
+# #         prometheus-node-exporter:
+# #           hostRootFsMount:
+# #             enabled: false
+# #         prometheusOperator:
+# #           admissionWebhooks:
+# #             failurePolicy: Ignore
+# #         additionalScrapeConfigs:
+# #           - job_name: argocd
+# #             static_configs: 
+# #               - targets: ["argocd-metrics:8082/metrics"]
+# #           - job_name: argocd-server
+# #             static_configs: 
+# #               - targets: ["argocd-server-metrics:8083/metrics"]
+# #     repoURL: https://prometheus-community.github.io/helm-charts
+# #     targetRevision: 42.0.3
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: all-about-monitoring
+#   namespace:  argocd
+#   finalizers:
+#   - resources-finalizer.argocd.argoproj.io
+# spec:
+#   syncPolicy:
+#     automated:
+#       prune: true
+#   destination:
+#     namespace:  argocd
+#     server: 'https://kubernetes.default.svc'
+#   project: default
+#   source:
+#     path: monitoring/charts/kube-prometheus-stack/
+#     repoURL: https://github.com/kunal2791/cldcvr.git
+#     targetRevision: main
