--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -1993,14 +1993,12 @@ serverFiles:
 # adds additional scrape configs to prometheus.yml
 # must be a string so you have to add a | after extraScrapeConfigs:
 # example adds prometheus-blackbox-exporter scrape config
-# extraScrapeConfigs:
-#   - job_name: 'argocd'
-#     metrics_path: /metrics
-#     params:
-#       module: [http_2xx]
-#     static_configs:
-#       - targets:
-#         - http://argocd-metrics:8082
+extraScrapeConfigs:
+  - job_name: 'argocd'
+    metrics_path: /metrics
+    static_configs:
+      - targets:
+        - argocd-metrics:8082
 #     # - job_name: 'argocd'
     #   static_configs: 
     #     - targets: ["argocd-metrics:8082/metrics"]
