--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -513,7 +513,7 @@ datasources:
    datasources:
    - name: Prometheus
      type: prometheus
-     url: http://monitoring-kube-prometheus-prometheus:9090
+     url: http://monitoring-kube-prometheus-prometheus
      access: proxy
      isDefault: true
   #  - name: loki
