--- a/apps/fetracingapp.yaml
+++ b/apps/fetracingapp.yaml
@@ -14,7 +14,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: samplepyapp/fe
+    path: samplepyapp/fe/
     repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
 
