--- a/samplepyapp/be/deploy.yaml
+++ b/samplepyapp/be/deploy.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: do-visit-counter-backend
-          image: kunal2791/do-visit-counter-backend:latest
+          image: kunal2791/do-visit-counter-backend:v1
           imagePullPolicy: Always
           ports:
             - name: backend-port
